--- a/identity/index.html
+++ b/identity/index.html
@@ -1389,7 +1389,7 @@ attributes, and credentials.</p>
 </div>
 <div class="literalblock">
 <div class="content">
-<pre>curl -v -L --key PrivateKey.pem --cert Certificate.pem 'https://maritimeid.maritimecloud.net/auth/realms/MaritimeCloud/protocol/openid-connect/auth?client_id=cert2oidc&amp;redirect_uri=http%3A%2F%2Flocalhost%3A99&amp;response_type=code&amp;kc_idp_hint=certificates&amp;scope=openid'</pre>
+<pre>curl --verbose --location --cookie "" --key PrivateKey.pem --cert Certificate.pem 'https://maritimeid.maritimecloud.net/auth/realms/MaritimeCloud/protocol/openid-connect/auth?client_id=cert2oidc&amp;redirect_uri=http%3A%2F%2Flocalhost%3A99&amp;response_type=code&amp;kc_idp_hint=certificates&amp;scope=openid'</pre>
 </div>
 </div>
 <div class="paragraph">
@@ -1398,7 +1398,7 @@ attributes, and credentials.</p>
 <div class="ulist">
 <ul>
 <li>
-<p><code>curl -v -L</code>: <code>curl</code> is the tool itself. <code>-v</code> means it will be in verbose mode and <code>-L</code> means curl will follow HTTP redirects. We need to follow redirects since that is used by OpenID Connect to go back and forth between servers, and the verbose mode is needed because we would like to see where we are redirected&#8201;&#8212;&#8201;especially the last redirect, but more about that later.</p>
+<p><code>curl --verbose --location --cookie ""</code>: <code>curl</code> is the tool itself. <code>--verbose</code> means it will be in verbose mode, <code>--location</code> means curl will follow HTTP redirects and <code>--cookie ""</code> activates the use of HTTP cookies which means that cookies received will be remember and used during redirects. We need to follow redirects since that is used by OpenID Connect to go back and forth between servers, and the verbose mode is needed because we would like to see where we are redirected&#8201;&#8212;&#8201;especially the last redirect, but more about that later.</p>
 </li>
 <li>
 <p><code>--key PrivateKey.pem --cert Certificate.pem</code>: Here the private key and the certificate is given to <code>curl</code> in PEM format.</p>
@@ -1418,7 +1418,7 @@ attributes, and credentials.</p>
 <p><code>client_id=cert2oidc</code>: This is a special OpenID Connect client setup to be used for certificate authentication.</p>
 </li>
 <li>
-<p><code>redirect_uri=http%3A%2F%2Flocalhost%3A99</code>: This is where the authentication server will redirect to at the end of the authentication. The parameter is URL encoded and decode looks like this: <code>http://localhost:99</code>. This address is meant to be invalid, since we want the last redirect to fail.</p>
+<p><code>redirect_uri=http%3A%2F%2Flocalhost%3A99</code>: This is where the authentication server will redirect to at the end of the authentication. The parameter is URL encoded and decoded looks like this: <code>http://localhost:99</code>. This address is meant to be invalid, since we want the last redirect to fail.</p>
 </li>
 <li>
 <p><code>response_type=code</code>: This defines that we uses the Authorization Flow as mentioned above.</p>
@@ -1438,12 +1438,12 @@ attributes, and credentials.</p>
 </ul>
 </div>
 <div class="paragraph">
-<p>When the command runs it returns a lot of output, due to being in verbose mode. We will not go into detail, but quite a few redirects happens, as described in the sequences diagram above. The last redirect however fails, which is intended. The final output will look like this:</p>
+<p>When the command runs it returns a lot of output, due to being in verbose mode. We will not go into detail, but quite a few redirects happens, as described in the sequences diagram above. The last redirect however fails, which is intended. The final output will look something like this:</p>
 </div>
 <div class="literalblock">
 <div class="content">
-<pre>* Issue another request to this URL: 'http://localhost:99?code=hzBswPz5iFB1npYE4HpZDRG5eowNM2Uv3Lp7pEjN1do.fb978d60-683c-46be-8c49-9a50ee80c961'
-* Rebuilt URL to: http://localhost:99/?code=hzBswPz5iFB1npYE4HpZDRG5eowNM2Uv3Lp7pEjN1do.fb978d60-683c-46be-8c49-9a50ee80c961
+<pre>* Issue another request to this URL: 'http://localhost:99?code=uss.Yw6k4rXOJiR6IF4a2Y7tYC1-Eqoo8dHSUwjfuIFDfpI.543a63db-9d22-45f7-85b6-a258059c0825.6826c662-6b68-423a-a248-71bd3e69dab0'
+* Rebuilt URL to: http://localhost:99/?code=uss.Yw6k4rXOJiR6IF4a2Y7tYC1-Eqoo8dHSUwjfuIFDfpI.543a63db-9d22-45f7-85b6-a258059c0825.6826c662-6b68-423a-a248-71bd3e69dab0
 *   Trying 127.0.0.1...
 * connect to 127.0.0.1 port 99 failed: Connection refused
 * Failed to connect to localhost port 99: Connection refused
@@ -1452,11 +1452,11 @@ curl: (7) Failed to connect to localhost port 99: Connection refused</pre>
 </div>
 </div>
 <div class="paragraph">
-<p>Here we can recognize <code>http://localhost:99</code> from the <code>redirect_uri</code> parameter described earlier. We can also see that a <code>code</code> parameter is in the url, in this case with the value <code>hzBswPz5iFB1npYE4HpZDRG5eowNM2Uv3Lp7pEjN1do.fb978d60-683c-46be-8c49-9a50ee80c961</code>. It is this code we need to in the second step of authentication to get the OpenID Connect Tokens. We will again use <code>curl</code> in the second step:</p>
+<p>Here we can recognize <code>http://localhost:99</code> from the <code>redirect_uri</code> parameter described earlier. We can also see that a <code>code</code> parameter is in the url, in this case with the value <code>uss.Yw6k4rXOJiR6IF4a2Y7tYC1-Eqoo8dHSUwjfuIFDfpI.543a63db-9d22-45f7-85b6-a258059c0825.6826c662-6b68-423a-a248-71bd3e69dab0</code>. It is this code we need to in the second step of authentication to get the OpenID Connect Tokens. The code is only valid for a very limited time (less than a minute) and can only be used once. We will again use <code>curl</code> in the second step:</p>
 </div>
 <div class="literalblock">
 <div class="content">
-<pre>curl --data "grant_type=authorization_code&amp;client_id=cert2oidc&amp;code=hzBswPz5iFB1npYE4HpZDRG5eowNM2Uv3Lp7pEjN1do.fb978d60-683c-46be-8c49-9a50ee80c961&amp;redirect_uri=http%3A%2F%2Flocalhost%3A99" https://maritimeid.maritimecloud.net/auth/realms/MaritimeCloud/protocol/openid-connect/token</pre>
+<pre>curl --data "grant_type=authorization_code&amp;client_id=cert2oidc&amp;code=uss.Yw6k4rXOJiR6IF4a2Y7tYC1-Eqoo8dHSUwjfuIFDfpI.543a63db-9d22-45f7-85b6-a258059c0825.6826c662-6b68-423a-a248-71bd3e69dab0&amp;redirect_uri=http%3A%2F%2Flocalhost%3A99" https://maritimeid.maritimecloud.net/auth/realms/MaritimeCloud/protocol/openid-connect/token</pre>
 </div>
 </div>
 <div class="paragraph">
@@ -1471,7 +1471,7 @@ curl: (7) Failed to connect to localhost port 99: Connection refused</pre>
 <p><code>client_id=cert2oidc</code>: The id of the special client, as mentioned above.</p>
 </li>
 <li>
-<p><code>code=hzBswPz5iFB1npYE4HpZDRG5eowNM2Uv3Lp7pEjN1do.fb978d60-683c-46be-8c49-9a50ee80c961</code>: The code we obtained earlier.</p>
+<p><code>code=uss.Yw6k4rXOJiR6IF4a2Y7tYC1-Eqoo8dHSUwjfuIFDfpI.543a63db-9d22-45f7-85b6-a258059c0825.6826c662-6b68-423a-a248-71bd3e69dab0</code>: The code we obtained earlier.</p>
 </li>
 <li>
 <p><code>redirect_uri=http%3A%2F%2Flocalhost%3A99</code>: The redirect url, the same as before, though not used for actual redirection in this case.</p>
@@ -1782,7 +1782,7 @@ curl: (7) Failed to connect to localhost port 99: Connection refused</pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2017-05-10 14:23:51 CEST
+Last updated 2017-06-18 20:45:47 CEST
 </div>
 </div>
 <script type="text/x-mathjax-config">
