--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="Java, Development, Maritime Cloud">
+    <meta name="keywords" content="Java, Development, Maritime Cloud, MCP, Maritime Connecivity Platform">
     <meta name="author" content="Kasper Nielsen">
 
     <title>Maritime Cloud Development</title>
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 <!-- Optional theme -->
 <link rel="stylesheet" href="http://getbootstrap.com/assets/css/docs.min.css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -31,7 +32,7 @@
            <span class="icon-bar"></span>
            <span class="icon-bar"></span>
           </button>
-          <a href="/" class="navbar-brand">Maritime Cloud</a>
+          <a href="/" class="navbar-brand">Maritime Connectivity Platform</a>
         </div>
         <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
           <ul class="nav navbar-nav">
@@ -41,12 +42,12 @@
             <li>
               <a href="./serviceregistry/index.html">Service Registry</a>
             </li>
-          </ul>          
+          </ul>
           <ul class="nav navbar-nav navbar-right">
           <!--  <li><a href="http://expo.getbootstrap.com" onclick="ga('send', 'event', 'Navbar', 'Community links', 'Expo');">Expo</a></li> -->
             <li><a href="https://groups.google.com/forum/#!forum/maritimecloud" onclick="ga('send', 'event', 'Navbar', 'Community links', 'Google Groups');">Google Groups</a></li>
           </ul>
-          
+
         </nav>
       </div>
     </header>
@@ -56,11 +57,11 @@
     <main class="bs-docs-masthead" id="content" role="main">
   <div class="container">
 <!--    <span class="bs-docs-booticon bs-docs-booticon-lg bs-docs-booticon-outline">B</span>-->
-    <p class="lead">This website contains development resources for developing services for the Maritime Cloud.</p>
+    <p class="lead">This website contains development resources for developing services for the Maritime Connectivity Platform.</p>
 
-<p class="lead">Goto our guide on the <a href="./identity/index.html">Identity Registry</a> to get started with using the Maritime Clouds identity solution, or read the guide for the <a href="./serviceregistry/index.html">Service Registry</a> to learn how to interact with it.</p>
+<p class="lead">Goto our guide on the <a href="./identity/index.html">Identity Registry</a> to get started with using MCP's identity solution, or read the guide for the <a href="./serviceregistry/index.html">Service Registry</a> to learn how to interact with it.</p>
 
-<p class="lead">Go to our <a href="https://groups.google.com/forum/#!forum/maritimecloud">Google Group</a> forum for questions about developing applications for the Maritime Cloud.</p>    
+<p class="lead">Go to our <a href="https://groups.google.com/forum/#!forum/maritimecloud">Google Group</a> forum for questions about developing applications for MCP.</p>
 <!--
     <p class="lead">
       <a href="getting-started#download" class="btn btn-outline-inverse btn-lg" onclick="ga('send', 'event', 'Jumbotron actions', 'Download', 'Download 3.2.0');">Download 0.2 Client</a>
