--- a/identity/index.html
+++ b/identity/index.html
@@ -579,7 +579,7 @@ table.CodeRay td.code>pre{padding:0}
 <h2 id="introduction"><a class="anchor" href="#introduction"></a><a class="link" href="#introduction">1. Introduction</a></h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>This development guide on the MCP identity platform describes the current state of the MCP reference implementation as of {releaseDate}.</p>
+<p>This development guide on the MCP identity platform describes the current state of the MCP reference implementation.</p>
 </div>
 <div class="paragraph">
 <p>Please do not email us directly about usage questions. Instead use our Google Group at <a href="https://groups.google.com/forum/#!forum/maritimecloud" class="bare">https://groups.google.com/forum/#!forum/maritimecloud</a> for general usage questions. In this way future users can see answers to commonly asked questions. Google Groups is also where we post information about new releases and updated documentation.</p>
@@ -1790,7 +1790,7 @@ curl: (7) Failed to connect to localhost port 99: Connection refused</pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2017-11-09 14:23:52 CET
+Last updated 2017-11-09 14:29:57 CET
 </div>
 </div>
 <script type="text/x-mathjax-config">
