update identity documentation

--- a/identity/index.html
+++ b/identity/index.html
@@ -579,7 +579,7 @@ table.CodeRay td.code>pre{padding:0}
 <h2 id="introduction"><a class="anchor" href="#introduction"></a><a class="link" href="#introduction">1. Introduction</a></h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>This development guide on the MCP identity platform describes the current state of the MCP reference implementation.</p>
+<p>This development guide on the Maritime Connectivity Platform identity platform describes the current state of the MCP reference implementation.</p>
 </div>
 <div class="paragraph">
 <p>Please do not email us directly about usage questions. Instead use our Google Group at <a href="https://groups.google.com/forum/#!forum/maritimecloud" class="bare">https://groups.google.com/forum/#!forum/maritimecloud</a> for general usage questions. In this way future users can see answers to commonly asked questions. Google Groups is also where we post information about new releases and updated documentation.</p>
@@ -590,7 +590,7 @@ table.CodeRay td.code>pre{padding:0}
 <div class="sect2">
 <h3 id="a-bit-of-history"><a class="anchor" href="#a-bit-of-history"></a><a class="link" href="#a-bit-of-history">1.1. A Bit of History</a></h3>
 <div class="paragraph">
-<p>The MCP project started out as an internal project at the Danish Maritime Authority in the autumn of 2012.
+<p>The Maritime Connectivity Platform project started out as an internal project at the Danish Maritime Authority in the autumn of 2012.
 As part of the e-Navigation process the Danish Maritime Authority had been working on an e-Navigation Prototype Display system called EPD. The EPD consist of two applications for demonstrating potential e-navigation solutions. An ECDIS like ship side application and a shore side application.</p>
 </div>
 <div class="paragraph">
@@ -964,10 +964,10 @@ attributes, and credentials.</p>
 <div class="sect2">
 <h3 id="getting-connected-to-mcp"><a class="anchor" href="#getting-connected-to-mcp"></a><a class="link" href="#getting-connected-to-mcp">4.5. Getting connected to MCP</a></h3>
 <div class="paragraph">
-<p>If your organizations wishes to connect to MCP as an Identity Provider, to enable your uses to authenticate in MCP, please contact Tomas Christensen at <a href="mailto:tgc@dma.dk">tgc@dma.dk</a> in order to set it up. Note that currently you need to expose interfaces that supports either OpenID Connect or SAML2.</p>
+<p>If your organizations wishes to connect to MCP as an Identity Provider, to enable your uses to authenticate in MCP, please contact Oliver Haagh at <a href="mailto:osh@dma.dk">osh@dma.dk</a> in order to set it up. Note that currently you need to expose interfaces that supports either OpenID Connect or SAML2.</p>
 </div>
 <div class="paragraph">
-<p>Within the scope of the EfficienSea2 and STM validation projects, organizations can get users registered in special project Identity Providers, supplied by MCP. EfficienSea2 partners should contact Tomas Christensen at <a href="mailto:tgc@dma.dk">tgc@dma.dk</a>, while STM partners should contact SMA.</p>
+<p>Within the scope of the EfficienSea2 and STM validation projects, organizations can get users registered in special project Identity Providers, supplied by MCP. To join MCP please fill out the form at <a href="https://management.maritimecloud.net/#/apply">Apply</a>.</p>
 </div>
 <div class="sect3">
 <h4 id="setup-oidc-idp"><a class="anchor" href="#setup-oidc-idp"></a><a class="link" href="#setup-oidc-idp">4.5.1. Setting up an OpenID Connect Identity Provider</a></h4>
@@ -1150,7 +1150,7 @@ attributes, and credentials.</p>
 <div class="sect2">
 <h3 id="get-mcp-root-certificate"><a class="anchor" href="#get-mcp-root-certificate"></a><a class="link" href="#get-mcp-root-certificate">5.1. Get MCP Root Certificate</a></h3>
 <div class="paragraph">
-<p>In order to use the certificates issued by MCP Identity Registry it is needed to add MCP Root Certificates to the relevant trustchain. Here you can download the root certificates for MCP instances:</p>
+<p>In order to use the certificates issued by the MCP Identity Registry it is needed to add MCP Root Certificates to the relevant trustchain. Here you can download the root certificates for MCP instances:</p>
 </div>
 <div class="paragraph">
 <p>MCP <strong>Production</strong> environment root certificates as <a href="http://developers.maritimecloud.net/identity/prod-certificate/mc-ca-chain.pem">PEM (one file, primarily for Apache/Nginx)</a>, in <a href="http://developers.maritimecloud.net/identity/prod-certificate/mc-truststore-password-is-changeit.jks">JKS (for Java)</a> or <a href="http://developers.maritimecloud.net/identity/prod-certificate/mc-ca-certs.zip">a zip with the separate files (for windows)</a>.</p>
@@ -1790,7 +1790,7 @@ curl: (7) Failed to connect to localhost port 99: Connection refused</pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2017-11-09 14:29:57 CET
+Last updated 2017-11-10 10:41:21 CET
 </div>
 </div>
 <script type="text/x-mathjax-config">
