--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 <p class="lead">Goto our guide on the <a href="./identity/index.html">Identity Registry</a> to get started with using MCP's identity solution, or read the guide for the <a href="./serviceregistry/index.html">Service Registry</a> to learn how to interact with it.</p>
 
-<p class="lead">Go to our <a href="https://groups.google.com/forum/#!forum/maritimecloud">Google Group</a> forum for questions about developing applications for MCP.</p>
+<p class="lead">Go to our <a href="https://groups.google.com/forum/#!forum/maritimeconnectivity">Google Group</a> forum for questions about developing applications for MCP.</p>
 <!--
     <p class="lead">
       <a href="getting-started#download" class="btn btn-outline-inverse btn-lg" onclick="ga('send', 'event', 'Jumbotron actions', 'Download', 'Download 3.2.0');">Download 0.2 Client</a>
