--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
           <!--  <li><a href="http://expo.getbootstrap.com" onclick="ga('send', 'event', 'Navbar', 'Community links', 'Expo');">Expo</a></li> -->
-            <li><a href="https://groups.google.com/forum/#!forum/maritimecloud" onclick="ga('send', 'event', 'Navbar', 'Community links', 'Google Groups');">Google Groups</a></li>
+            <li><a href="https://groups.google.com/forum/#!forum/maritimeconnectivity" onclick="ga('send', 'event', 'Navbar', 'Community links', 'Google Groups');">Google Groups</a></li>
           </ul>
 
         </nav>
