update identity documentation

--- a/identity/index.html
+++ b/identity/index.html
@@ -582,7 +582,7 @@ table.CodeRay td.code>pre{padding:0}
 <p>This development guide on the Maritime Connectivity Platform identity platform describes the current state of the MCP reference implementation.</p>
 </div>
 <div class="paragraph">
-<p>Please do not email us directly about usage questions. Instead use our Google Group at <a href="https://groups.google.com/forum/#!forum/maritimecloud" class="bare">https://groups.google.com/forum/#!forum/maritimecloud</a> for general usage questions. In this way future users can see answers to commonly asked questions. Google Groups is also where we post information about new releases and updated documentation.</p>
+<p>Please do not email us directly about usage questions. Instead use our Google Group at <a href="https://groups.google.com/forum/#!forum/maritimeconnectivity" class="bare">https://groups.google.com/forum/#!forum/maritimeconnectivity</a> for general usage questions. In this way future users can see answers to commonly asked questions. Google Groups is also where we post information about new releases and updated documentation.</p>
 </div>
 <div class="paragraph">
 <p>This developer guide is intended to make you familiar with developing secure applications and services for MCP in particular with regards to Identity Management.</p>
@@ -658,7 +658,7 @@ As part of the e-Navigation process the Danish Maritime Authority had been worki
 <p>Readers may send feedback about errors, omissions, and ambiguities in this guide to <a href="mailto:osh@dma.dk">osh@dma.dk</a> or even better submit a pull request to the documentation available at <a href="https://github.com/MaritimeCloud/developers.maritimecloud.net" class="bare">https://github.com/MaritimeCloud/developers.maritimecloud.net</a>.</p>
 </div>
 <div class="paragraph">
-<p>As previously mentioned questions about usage of MCP should be directed to our Google Group at <a href="https://groups.google.com/forum/#!forum/maritimecloud" class="bare">https://groups.google.com/forum/#!forum/maritimecloud</a></p>
+<p>As previously mentioned questions about usage of MCP should be directed to our Google Group at <a href="https://groups.google.com/forum/#!forum/maritimeconnectivity" class="bare">https://groups.google.com/forum/#!forum/maritimeconnectivity</a></p>
 </div>
 <div style="page-break-after: always;"></div>
 </div>
@@ -1790,7 +1790,7 @@ curl: (7) Failed to connect to localhost port 99: Connection refused</pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2017-11-10 10:41:21 CET
+Last updated 2017-11-13 09:47:06 CET
 </div>
 </div>
 <script type="text/x-mathjax-config">
