update identity documentation

--- a/identity/index.html
+++ b/identity/index.html
@@ -1285,32 +1285,37 @@ attributes, and credentials.</p>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Flagstate</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>2.25.323100633285601570573910217875371967771</code></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Vessels</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Vessels, Services</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Callsign</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>2.25.208070283325144527098121348946972755227</code></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Vessels</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Vessels, Services</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">IMO number</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>2.25.291283622413876360871493815653100799259</code></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Vessels</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Vessels, Services</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">MMSI number</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>2.25.328433707816814908768060331477217690907</code></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Vessels</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Vessels, Services</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">AIS shiptype</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>2.25.107857171638679641902842130101018412315</code></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Vessels</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Vessels, Services</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Port of register</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>2.25.285632790821948647314354670918887798603</code></p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">Vessels</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Vessels, Services</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Ship MRN</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock"><code>2.25.268095117363717005222833833642941669792</code></p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Services</p></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock">MRN</p></td>
@@ -1790,7 +1795,7 @@ curl: (7) Failed to connect to localhost port 99: Connection refused</pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2017-12-08 10:06:08 CET
+Last updated 2017-12-08 10:07:43 CET
 </div>
 </div>
 <script type="text/x-mathjax-config">
