--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 <!--
     <p>Designed and built with all the love in the world by <a href="http://twitter.com/mdo" target="_blank">@mdo</a> and <a href="http://twitter.com/fat" target="_blank">@fat</a>.</p>
     -->
-    <p>Maintained by the <a href="https://github.com/maritimecloud?tab=members">core team</a>.</p>
+    <p>Maintained by the <a href="https://github.com/MaritimeConnectivityPlatform?tab=members">core team</a>.</p>
     <p>Code licensed under <a href="http://www.apache.org/licenses/LICENSE-2.0.html" target="_blank">Apache License, Version 2.0</a>, documentation under <a href="http://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a>.</p>
     <ul class="bs-docs-footer-links muted">
       <li>Currently v0.2</li>
