--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <ul class="bs-docs-footer-links muted">
       <li>Currently v0.2</li>
       <li>&middot;</li>
-      <li><a href="https://github.com/MaritimeCloud">GitHub</a></li>
+      <li><a href="https://github.com/MaritimeConnectivityPlatform/">GitHub</a></li>
       <li>&middot;</li>
 <!--
       <li><a href="../getting-started/#examples">Examples</a></li>
