--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
     <div class="bs-docs-social">
   <ul class="bs-docs-social-buttons">
     <li>
-      <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=maritimecloud&amp;repo=maritimecloud&amp;type=watch&amp;count=true" width="100" height="20" title="Star on GitHub"></iframe>
+      <iframe class="github-btn" src="https://ghbtns.com/github-btn.html?user=maritimecloud&amp;repo=maritimecloud&amp;type=watch&amp;count=true" width="100" height="20" title="Star on GitHub"></iframe>
     </li>
     <li>
-      <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=maritimecloud&amp;repo=maritimecloud&amp;type=fork&amp;count=true" width="102" height="20" title="Fork on GitHub"></iframe>
+      <iframe class="github-btn" src="https://ghbtns.com/github-btn.html?user=maritimecloud&amp;repo=maritimecloud&amp;type=fork&amp;count=true" width="102" height="20" title="Fork on GitHub"></iframe>
     </li>
     <!--
     <li class="follow-btn">
