--- a/identity/index.html
+++ b/identity/index.html
@@ -1789,7 +1789,7 @@ curl: (7) Failed to connect to localhost port 99: Connection refused</pre>
 <div class="ulist">
 <ul>
 <li>
-<p><strong>The use of MCP as a login mechanism:</strong> We share our experience from <a href="http://stmvalidation.eu/news/portcdm-information-sharing-in-real-time/">PortCDM</a> on the use of MCP as a login mechanism based on Keycloak in <a href="http://manual.maritimeconnectivity.net/">this word file</a>.</p>
+<p><strong>The use of MCP as a login mechanism:</strong> We share our experience from <a href="http://stmvalidation.eu/news/portcdm-information-sharing-in-real-time/">PortCDM</a> on the use of MCP as a login mechanism based on Keycloak; refer <a href="https://github.com/MaritimeConnectivityPlatform/developers.maritimeconnectivity.net/raw/gh-pages/identity/docx/The%20use%20of%20MCP%20as%20login-mechanism.docx">this Microsoft Word file</a>.</p>
 </li>
 </ul>
 </div>
@@ -1804,7 +1804,7 @@ curl: (7) Failed to connect to localhost port 99: Connection refused</pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2018-11-02 12:44:55 KST
+Last updated 2018-11-02 12:49:58 KST
 </div>
 </div>
 <script type="text/x-mathjax-config">
