update serviceregistry documentation

--- a/serviceregistry/index.html
+++ b/serviceregistry/index.html
@@ -768,6 +768,9 @@ The organization ID is encoded within the token and is set by the Identity Regis
 <p>The service coverage area may consist of one or more geographic shapes or points. It should be noted that while a service may be defined using just one or more latitude/longitude point coordinates, it is advisable to always use an area shape like a polygon. Otherwise, queries using a point coordinate may not be able to intersect with and find the service instance.</p>
 </div>
 <div class="paragraph">
+<p>Service coverage geometries follow the right-hand rule, meaning that points of a polygon that encloses an area have to be defined in counterclockwise order. Holes in a covered area (exclusion zones) have to be expressed as a polygon with its points defined in clockwise order.</p>
+</div>
+<div class="paragraph">
 <p>Services registered with no coverage geometry are treated as being available world-wide, unless an UN/LOCODE has been set.</p>
 </div>
 </div>
@@ -800,6 +803,9 @@ The organization ID is encoded within the token and is set by the Identity Regis
 <p><strong>searchGeometryGeoJSON</strong> Same as the WKT search, but accepts the search geometry in GeoJSON format.</p>
 </li>
 </ul>
+</div>
+<div class="paragraph">
+<p>Note that the same rules as for the definition of coverage areas (right-hand rule) apply: inclusive shapes have to be in counter-clockwise order, exclusion shapes in clockwise order.</p>
 </div>
 <div style="page-break-after: always;"></div>
 </div>
@@ -887,7 +893,7 @@ The organization ID is encoded within the token and is set by the Identity Regis
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2017-11-10 10:36:45 CET
+Last updated 2018-12-14 14:22:56 CET
 </div>
 </div>
 <script type="text/x-mathjax-config">
