--- a/identity/index.html
+++ b/identity/index.html
@@ -661,7 +661,7 @@ As part of the e-Navigation process the Danish Maritime Authority had been worki
 <div class="sect2">
 <h3 id="feedback"><a class="anchor" href="#feedback"></a><a class="link" href="#feedback">1.4. Feedback</a></h3>
 <div class="paragraph">
-<p>Readers may send feedback about errors, omissions, and ambiguities in this guide to oliver@dmc.international or even better submit a pull request to the documentation available at <a href="https://github.com/MaritimeConnectivityPlatform/developers.maritimeconnectivity.net" class="bare">https://github.com/MaritimeConnectivityPlatform/developers.maritimeconnectivity.net</a>.</p>
+<p>Readers may send feedback about errors, omissions, and ambiguities in this guide to <a href="mailto:oliver@dmc.international">oliver@dmc.international</a> or even better submit a pull request to the documentation available at <a href="https://github.com/MaritimeConnectivityPlatform/developers.maritimeconnectivity.net" class="bare">https://github.com/MaritimeConnectivityPlatform/developers.maritimeconnectivity.net</a>.</p>
 </div>
 <div class="paragraph">
 <p>As previously mentioned questions about usage of MCP should be directed to our Google Group at <a href="https://groups.google.com/forum/#!forum/maritimeconnectivity" class="bare">https://groups.google.com/forum/#!forum/maritimeconnectivity</a></p>
@@ -973,7 +973,7 @@ attributes, and credentials.</p>
 <div class="sect2">
 <h3 id="getting-connected-to-mcp"><a class="anchor" href="#getting-connected-to-mcp"></a><a class="link" href="#getting-connected-to-mcp">4.5. Getting connected to MCP</a></h3>
 <div class="paragraph">
-<p>If your organizations wishes to connect to MCP as an Identity Provider, to enable your uses to authenticate in MCP, please contact Oliver Haagh at oliver@dmc.international in order to set it up. Note that currently you need to expose interfaces that supports either OpenID Connect or SAML2.</p>
+<p>If your organizations wishes to connect to MCP as an Identity Provider, to enable your uses to authenticate in MCP, please contact Oliver Haagh at <a href="mailto:oliver@dmc.international">oliver@dmc.international</a> in order to set it up. Note that currently you need to expose interfaces that supports either OpenID Connect or SAML2.</p>
 </div>
 <div class="paragraph">
 <p>Within the scope of the EfficienSea2 and STM validation projects, organizations can get users registered in special project Identity Providers, supplied by MCP. To join MCP please fill out the form at <a href="https://management.maritimecloud.net/#/apply">Apply</a>.</p>
@@ -1817,7 +1817,7 @@ curl: (7) Failed to connect to localhost port 99: Connection refused</pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-01-15 14:29:58 +0100
+Last updated 2019-01-15 14:30:16 +0100
 </div>
 </div>
 <script type="text/x-mathjax-config">
