--- a/identity/index.html
+++ b/identity/index.html
@@ -867,7 +867,7 @@ attributes, and credentials.</p>
 <div class="sect2">
 <h3 id="openid-connect"><a class="anchor" href="#openid-connect"></a><a class="link" href="#openid-connect">4.1. OpenID Connect</a></h3>
 <div class="paragraph">
-<p><a href="http://openid.net/">OpenID Connect</a> is the protocol chosen to be used for user federation in MCP, and it should be supported by Service Providers. It is an interoperable authentication protocol based on the <a href="http://oauth.net/2/">OAuth 2.0</a> family of specifications. It uses straightforward REST/JSON message flows with a design goal of "making simple things simple and complicated things possible". It’s uniquely easy for developers to integrate, compared to any preceding Identity protocols.</p>
+<p><a href="https://openid.net/connect">OpenID Connect</a> is the protocol chosen to be used for user federation in MCP, and it should be supported by Service Providers. It is an interoperable authentication protocol based on the <a href="https://oauth.net/2/">OAuth 2.0</a> family of specifications. It uses straightforward REST/JSON message flows with a design goal of "making simple things simple and complicated things possible". It’s uniquely easy for developers to integrate, compared to any preceding Identity protocols.</p>
 </div>
 <div class="paragraph">
 <p>OpenID Connect lets developers authenticate their users across websites and apps without having to own and manage password files. For the app builder, it provides a secure verifiable, answer to the question: "What is the identity of the person currently using the browser or native app that is connected to me?"</p>
@@ -882,7 +882,7 @@ attributes, and credentials.</p>
 <div class="sect2">
 <h3 id="mcp-user-federation-setup"><a class="anchor" href="#mcp-user-federation-setup"></a><a class="link" href="#mcp-user-federation-setup">4.2. MCP User Federation Setup</a></h3>
 <div class="paragraph">
-<p>In most federated setups there is 1 step from the website (Service Provider) that need authentication and the Identity Provider, normally presented with a "Log in with X" link, where X could be Facebook, Google, etc. The setup used in MCP has 2 steps, where the first step is MCP Identity Broker which presents the user with a list of available Identity Providers, which is the second step. For a deeper understanding of how this is actually done please read the <a href="http://www.keycloak.org/docs/3.0/server_admin/topics/identity-broker/overview.html">Identity Broker overview section from the Keycloak manual</a>. Keycloak is the software used for MCP Identity Broker.</p>
+<p>In most federated setups there is 1 step from the website (Service Provider) that need authentication and the Identity Provider, normally presented with a "Log in with X" link, where X could be Facebook, Google, etc. The setup used in MCP has 2 steps, where the first step is MCP Identity Broker which presents the user with a list of available Identity Providers, which is the second step. For a deeper understanding of how this is actually done please read the <a href="https://www.keycloak.org/docs/latest/server_admin/index.html#_identity_broker_overview">Identity Broker overview section from the Keycloak manual</a>. Keycloak is the software used for MCP Identity Broker.</p>
 </div>
 <div class="paragraph">
 <p>MCP expects the following attributes in the OpenID Connect JWT Access Token:</p>
@@ -1817,7 +1817,7 @@ curl: (7) Failed to connect to localhost port 99: Connection refused</pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2019-01-15 14:30:16 +0100
+Last updated 2019-01-15 14:46:12 +0100
 </div>
 </div>
 <script type="text/x-mathjax-config">
